@@ -86,13 +86,13 @@
   </td>
   <td colspan=2>
 	<form method="GET" action="../select/">
-        <input name="stylesheet" type="text" value=""><br>
-        <textarea rows="4" cols="40" name="q"><%= defaultSearch %></textarea>
+        <input class="std" name="stylesheet" type="text" value=""><br>
+        <textarea class="std" rows="4" cols="40" name="q"><%= defaultSearch %></textarea>
         <input name="version" type="hidden" value="2.1">
 	<input name="start" type="hidden" value="0">
 	<input name="rows" type="hidden" value="10">
 	<input name="indent" type="hidden" value="on">
-        <br><input type="submit" value="search">
+        <br><input class="stdbutton" type="submit" value="search">
 	</form>
   </td>
 </tr>
