@@ -13,13 +13,15 @@ strong {
    margin: 0;
 }
 
-input[type="text"], textarea {
+input.std, textarea.std {
    color: black;
    border: 2px inset #ff9933;
    background-color: #ffffff;
+   width:450px;
+   max-width:450px;
 }
 
-input[type="submit"] {
+input.stdbutton {
    font-family: ITC Officina Sans Book, Helvetica, Arial, sans-serif;
    font-style: bold;
    font-size: 11;
@@ -29,7 +31,7 @@ input[type="submit"] {
    border: groove #ff9933;
 }
 
-input[type="submit"]:hover {
+input.stdbutton:hover {
    color: #0000ff;
    border: groove #0000ff;
 }
@@ -50,11 +52,7 @@ table {
    cellpadding-right: 8px;
 }
 
-table[name="responseHeader"] {
-   width: auto;
-}
-
-table[name="table"] {
+table.responseHeader, table.analysis {
    width: auto;
 }
 
@@ -62,45 +60,35 @@ table {
    border-collapse: collapse
 }
 
-tr {
-   border-bottom: 1px solid #ff9933;
-}
-
 
 tr > td:first-child {
    width: 30%;
 }
 
-tr > td[name="debugdata"] {
-  width: auto;
+td.debugdata, td.highlight, td.responseHeader {
+   width: auto;
 }
 
-tr > td[name="highlight"]:first-child {
-   width: auto;
+td.highlight {
    background:	#ccccff;
 }
 
-tr > td[name="responseHeader"]:first-child {
+td.responseHeader {
    width: auto;
    text-align: right;
 }
 
-tr > td[name="responseHeader"] + td {
+td.responseHeader + td {
    text-align: left;
    font-family: Courier;
 }
 
 
-td {
+th, td {
    text-align: left;
    vertical-align: top;
+   border-bottom: 1px solid #ff9933;
 }
-
-td[name="highlight"] {
-   width: auto;
-   background:	#ccccff;
-}
-
 
 a {
    text-decoration:	none;
@@ -130,4 +118,8 @@ a:hover {
 a:offsite {	
    color:	#0000aa;
 }		 
+
+table.analysis th, table.analysis td {
+border-right:1px solid black;
+}
 
